# sdp

./: LICENSE  README.md
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/logs/tug_observer_plugin_utils/: build.cmake.000.log.stderr
catkin_ws/logs/tug_observers/: build.cmake.000.log.stderr
catkin_ws/src/: test.py
ci/: setup_ws.sh
model_based_diagnosis/: .gitignore
model_based_diagnosis/tug_diagnosis/tug_diagnosis/: CMakeLists.txt
model_based_diagnosis/tug_diagnosis/tug_diagnosis_msgs/: CMakeLists.txt  package.xml
model_based_diagnosis/tug_observers/tug_observers_msgs/: CMakeLists.txt
model_based_diagnosis/tug_resource_monitor/config/: test.yaml
model_based_diagnosis/tug_resource_monitor/launch/: paul.launch  test.launch
model_based_diagnosis/tug_resource_monitor/msg/: NodeInfoArray.msg
model_based_diagnosis/tug_resource_monitor/scripts/: tug_resource_monitor_node.py
model_based_diagnosis/tug_resource_monitor/srv/: NodesInfo.srv
tug_diagnosis/tug_diagnosis/config/: config.yaml  config_anna.yaml
tug_diagnosis/tug_diagnosis/launch/: diagnosis_initialization.launch  diagnosis_paul.launch
tug_diagnosis/tug_diagnosis/scripts/: config_validator.py  data.sql  diagnoses.db  diagnosis_node.py  rosCommunicator.py  run.py  run_tests.py  yaml_validater.py
tug_diagnosis/tug_diagnosis/test/: test_diagnosis.test  test_diagnosis_node.py
tug_diagnosis/tug_diagnosis_msgs/msg/: diagnosis_set.msg
tug_diagnosis/tug_diagnosis_msgs/srv/: DiagnosisConfiguration.srv
tug_examination/tug_reporter/: CMakeLists.txt  package.xml
tug_examination/tug_reporter/config/: test.yaml
tug_examination/tug_reporter/scripts/: diagnosis_store.py  observation_store.py
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/: CMakeLists.txt  package.xml
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/include/tug_observer_plugin_utils/differentiation/: Differentiation.h  SimpleLinearRegression.h  SingleSideDifferentiation.h
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/include/tug_observer_plugin_utils/filter/: Filter.h
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/include/tug_observer_plugin_utils/filter/deviation_filter/: DeviationFilter.h
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/include/tug_observer_plugin_utils/filter/deviation_filter/min_max_deviation_filter/: MinMaxDeviationFilterWithBuffer.h  MinMaxDeviationFilterWithoutBuffer.h
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/include/tug_observer_plugin_utils/filter/deviation_filter/standart_deviation_filter/: StandartDeviationFilterWithBuffer.h  StandartDeviationFilterWithoutBuffer.h
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/include/tug_observer_plugin_utils/filter/value_filter/: EWMAValueFilter.h
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/include/tug_observer_plugin_utils/filter/value_filter/mean_value_filter/: MeanValueFilterWithoutBuffer.h
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/include/tug_observer_plugin_utils/hypothesis_check/singe_value_hypothesis_check/: NominalValueHypothesis.h
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/include/tug_observer_plugin_utils/hypothesis_check/singe_value_hypothesis_check/nominal_value/: ExactNominalValue.h  GreaterThanNominalValue.h  InBetweenNominalValue.h  LessThanNominalValue.h  NominalValue.h  NominalValueFactory.h  NotNominalValue.h
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/include/tug_observer_plugin_utils/integration/: Integration.h
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/scripts/: tug_observer_plugin_utils.py
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/scripts/filter/: __init__.py  valuefilter.py
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/scripts/hypothesis_check/single_value_hypothesis_check/: nominal_value.py  single_value_hypothesis_check.py  student_t_test.py
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/src/differentiation/: Differentiation.cpp  SingleSideDifferentiation.cpp
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/src/filter/deviation_filter/: DeviationFilterFactory.cpp  MinMaxDeviationFilter.cpp
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/src/filter/deviation_filter/min_max_deviation_filter/: MinMaxDeviationFilterWithBuffer.cpp  MinMaxDeviationFilterWithoutBuffer.cpp
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/src/filter/value_filter/: EWMAValueFilter.cpp  MedianValueFilter.cpp
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/src/filter/value_filter/ewma_value_filter/: EWMAValueFilterWithoutBuffer.cpp
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/src/filter/value_filter/mean_value_filter/: MeanValueFilterWithoutBuffer.cpp
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/src/hypothesis_check/singe_value_hypothesis_check/: NominalValueHypothesis.cpp  SingleValueHypothesisCheck.cpp  SingleValueHypothesisCheckFactory.cpp  StudentsTSingleHypothesis.cpp
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/src/integration/: SimpleSummBasedIntegration.cpp
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/src/interpolation/: Interpolation.cpp  LinearInterpolation.cpp
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/test/: TestEWMAFilter.cpp  TestMedianFilter.cpp  TestSimpleLinearRegression.cpp  TestTwoSideDifferentiation.cpp
tug_observers/tug_observer_plugins/tug_observer_plugin_utils/test/launch/: test_mean_filter.test
tug_observers/tug_observers/: CMakeLists.txt  setup.py
tug_observers/tug_observers/config/: observer_hz.yaml  (+6 more)
tug_observers/tug_observers_msgs/: package.xml
tug_resource_monitor/: CMakeLists.txt
tug_resource_monitor/config/: paul.yaml
tug_resource_monitor/msg/: NodeInfo.msg
tug_resource_monitor/scripts/: tug_resource_monitor_node_for_recording.py
(+844 files in other folders)
